WindowsLiquidGlass/src/GPUDeviceManager/src/gpu_device_manager_wrapper.py

"""
GPU设备管理器 Python 包装
支持: 多GPU管理 + 通用资源缓存池 + D3D11/OpenGL 零拷贝互操作
多实例版本：每个 GPUDeviceManager 实例拥有独立的 GPUContext（设备/资源池/互操作全部隔离）
"""

import ctypes
import os
from enum import IntEnum
from typing import List, Dict, Optional, Tuple
from dataclasses import dataclass

_DLL_PATH = os.path.join(os.path.dirname(__file__), "..", "bin")
_DLL_PATH = os.path.abspath(_DLL_PATH).replace("\\", "/")
os.environ["PATH"] = f"{_DLL_PATH};{os.environ['PATH']}"

_DLL_FILE = f"{_DLL_PATH}/gpu_device_manager.dll".replace("\\", "/")

# ============================================================
#  枚举类型
# ============================================================

class GPUPreference(IntEnum):
    """GPU偏好设置"""
    AUTO = 0
    DEDICATED = 1
    INTEGRATED = 2
    LOW_POWER = 3
    HIGH_PERFORMANCE = 4
    SPECIFIC = 5

class GPURole(IntEnum):
    """GPU角色"""
    MAIN = 0          # 主GPU (用于计算)
    DISPLAY = 1       # 有显示器连接的GPU
    BOTH = 2          # 既是主GPU也有显示器

class GPUResourceType(IntEnum):
    """GPU资源类型"""
    TEXTURE2D = 0
    TEXTURE3D = 1
    BUFFER = 2
    STRUCTURED_BUFFER = 3
    RENDER_TARGET = 4
    CUSTOM = 5

# ============================================================
#  数据类
# ============================================================

@dataclass
class GPUInfo:
    """GPU信息"""
    index: int
    name: str
    memory_mb: int
    vendor_id: int
    vendor_name: str
    role: GPURole
    monitor_count: int
    is_integrated: bool
    
    def __repr__(self):
        gpu_type = "集显" if self.is_integrated else "独显"
        role_name = {GPURole.MAIN: "主GPU", GPURole.DISPLAY: "显示", GPURole.BOTH: "主+显示"}
        return (f"GPU[{self.index}]: {self.name} ({self.vendor_name} {gpu_type}, "
                f"{self.memory_mb}MB, {role_name.get(self.role, '未知')}, "
                f"{self.monitor_count}个显示器)")

@dataclass
class MonitorInfo:
    """显示器信息"""
    index: int
    left: int
    top: int
    right: int
    bottom: int
    width: int
    height: int
    gpu_index: int
    
    def __repr__(self):
        return (f"Monitor[{self.index}]: {self.width}x{self.height} "
                f"at ({self.left},{self.top}) -> GPU[{self.gpu_index}]")

@dataclass
class ResourceInfo:
    """GPU资源信息"""
    resource_id: int
    resource_ptr: int
    srv_ptr: int
    resource_type: GPUResourceType
    width: int
    height: int
    owner_gpu: int
    
    def __repr__(self):
        type_name = {
            GPUResourceType.TEXTURE2D: "Texture2D",
            GPUResourceType.TEXTURE3D: "Texture3D",
            GPUResourceType.BUFFER: "Buffer",
            GPUResourceType.STRUCTURED_BUFFER: "StructuredBuffer",
            GPUResourceType.RENDER_TARGET: "RenderTarget",
            GPUResourceType.CUSTOM: "Custom"
        }
        return (f"Resource[{self.resource_id}]: {type_name.get(self.resource_type, 'Unknown')} "
                f"{self.width}x{self.height} on GPU[{self.owner_gpu}]")

# ============================================================
#  GPU设备管理器
# ============================================================

class GPUDeviceManager:
    """GPU设备管理器 - 每个实例持有独立的 GPUContext（完全隔离的设备/资源池）"""

    # 类级别：只加载 DLL 一次，签名也只设置一次
    _dll = None
    _signatures_configured = False

    def __init__(self):
        # 加载 DLL（只加载一次）
        if GPUDeviceManager._dll is None:
            if not os.path.exists(_DLL_FILE):
                raise FileNotFoundError(f"DLL not found: {_DLL_FILE}")
            GPUDeviceManager._dll = ctypes.CDLL(_DLL_FILE)

        self.dll = GPUDeviceManager._dll

        if not GPUDeviceManager._signatures_configured:
            self._setup_signatures()
            GPUDeviceManager._signatures_configured = True

        # 每个实例创建独立的 GPUContext
        self._handle: ctypes.c_void_p = self.dll.GPUMgr_Create()
        if not self._handle:
            raise RuntimeError("GPUMgr_Create() 返回空句柄")

    # ------------------------------------------------------------------
    #  函数签名设置（所有函数首参数均为 c_void_p handle）
    # ------------------------------------------------------------------
    def _setup_signatures(self):
        """设置DLL函数签名"""
        h = ctypes.c_void_p

        # 生命周期
        self.dll.GPUMgr_Create.argtypes = []
        self.dll.GPUMgr_Create.restype = h

        self.dll.GPUMgr_Destroy.argtypes = [h]
        self.dll.GPUMgr_Destroy.restype = None

        # ========== 设备管理 ==========
        self.dll.GPUMgr_Initialize.argtypes = [h, ctypes.c_int]
        self.dll.GPUMgr_Initialize.restype = ctypes.c_int

        self.dll.GPUMgr_Shutdown.argtypes = [h]
        self.dll.GPUMgr_Shutdown.restype = None

        self.dll.GPUMgr_IsInitialized.argtypes = [h]
        self.dll.GPUMgr_IsInitialized.restype = ctypes.c_int

        self.dll.GPUMgr_GetGPUCount.argtypes = [h]
        self.dll.GPUMgr_GetGPUCount.restype = ctypes.c_int

        self.dll.GPUMgr_GetGPUInfo.argtypes = [
            h,
            ctypes.c_int,
            ctypes.c_char_p,
            ctypes.c_int,
            ctypes.POINTER(ctypes.c_size_t),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
        ]
        self.dll.GPUMgr_GetGPUInfo.restype = ctypes.c_int

        self.dll.GPUMgr_GetMonitorCount.argtypes = [h]
        self.dll.GPUMgr_GetMonitorCount.restype = ctypes.c_int

        self.dll.GPUMgr_GetMonitorInfo.argtypes = [
            h,
            ctypes.c_int,
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
        ]
        self.dll.GPUMgr_GetMonitorInfo.restype = ctypes.c_int

        self.dll.GPUMgr_GetMainDevice.argtypes = [h]
        self.dll.GPUMgr_GetMainDevice.restype = h

        self.dll.GPUMgr_GetMainContext.argtypes = [h]
        self.dll.GPUMgr_GetMainContext.restype = h

        self.dll.GPUMgr_GetDeviceByGPUIndex.argtypes = [h, ctypes.c_int]
        self.dll.GPUMgr_GetDeviceByGPUIndex.restype = h

        self.dll.GPUMgr_GetContextByGPUIndex.argtypes = [h, ctypes.c_int]
        self.dll.GPUMgr_GetContextByGPUIndex.restype = h

        self.dll.GPUMgr_GetDeviceByMonitor.argtypes = [h, ctypes.c_int]
        self.dll.GPUMgr_GetDeviceByMonitor.restype = h

        self.dll.GPUMgr_GetDebugInfo.argtypes = [h]
        self.dll.GPUMgr_GetDebugInfo.restype = ctypes.c_char_p

        # ========== 资源池管理 ==========
        self.dll.GPUMgr_AddResourceToPool.argtypes = [
            h, h, ctypes.c_int, h, ctypes.c_int, ctypes.c_char_p
        ]
        self.dll.GPUMgr_AddResourceToPool.restype = ctypes.c_uint64

        self.dll.GPUMgr_CreateResourceInPool.argtypes = [
            h,
            ctypes.c_int, ctypes.c_int, ctypes.c_int,
            ctypes.c_int, ctypes.c_int, ctypes.c_int,
            ctypes.c_int, ctypes.c_char_p,
        ]
        self.dll.GPUMgr_CreateResourceInPool.restype = ctypes.c_uint64

        self.dll.GPUMgr_GetResourceFromPool.argtypes = [
            h,
            ctypes.c_uint64,
            ctypes.POINTER(h),
            ctypes.POINTER(h),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
        ]
        self.dll.GPUMgr_GetResourceFromPool.restype = ctypes.c_int

        self.dll.GPUMgr_RemoveResourceFromPool.argtypes = [h, ctypes.c_uint64]
        self.dll.GPUMgr_RemoveResourceFromPool.restype = None

        self.dll.GPUMgr_ClearResourcePool.argtypes = [h]
        self.dll.GPUMgr_ClearResourcePool.restype = None

        self.dll.GPUMgr_CopyResourceToGPU.argtypes = [h, ctypes.c_uint64, ctypes.c_int]
        self.dll.GPUMgr_CopyResourceToGPU.restype = ctypes.c_uint64

        self.dll.GPUMgr_CopyResourceToCPU.argtypes = [h, ctypes.c_uint64, h]
        self.dll.GPUMgr_CopyResourceToCPU.restype = ctypes.c_int

        self.dll.GPUMgr_GetResourceDataSize.argtypes = [
            h,
            ctypes.c_uint64,
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
        ]
        self.dll.GPUMgr_GetResourceDataSize.restype = ctypes.c_int

        self.dll.GPUMgr_GetPoolStats.argtypes = [
            h,
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_size_t),
        ]
        self.dll.GPUMgr_GetPoolStats.restype = ctypes.c_int

        # ========== Desktop Duplication 显示器捕获 ==========
        self.dll.GPUMgr_InitializeDisplayCapture.argtypes = [h]
        self.dll.GPUMgr_InitializeDisplayCapture.restype = ctypes.c_int

        self.dll.GPUMgr_ShutdownDisplayCapture.argtypes = [h]
        self.dll.GPUMgr_ShutdownDisplayCapture.restype = None

        self.dll.GPUMgr_GetDisplayCount.argtypes = [h]
        self.dll.GPUMgr_GetDisplayCount.restype = ctypes.c_int

        self.dll.GPUMgr_GetDisplayBounds.argtypes = [
            h,
            ctypes.c_int,
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
            ctypes.POINTER(ctypes.c_int),
        ]
        self.dll.GPUMgr_GetDisplayBounds.restype = ctypes.c_int

        self.dll.GPUMgr_GetDisplayGPUIndex.argtypes = [h, ctypes.c_int]
        self.dll.GPUMgr_GetDisplayGPUIndex.restype = ctypes.c_int

        self.dll.GPUMgr_GetDisplayTexture.argtypes = [h, ctypes.c_int]
        self.dll.GPUMgr_GetDisplayTexture.restype = h

        self.dll.GPUMgr_CaptureDisplayRegion.argtypes = [
            h,
            ctypes.c_int, ctypes.c_int, ctypes.c_int,
            ctypes.c_int, ctypes.c_int, ctypes.c_char_p,
        ]
        self.dll.GPUMgr_CaptureDisplayRegion.restype = ctypes.c_uint64

        self.dll.GPUMgr_ReleaseDisplayFrame.argtypes = [h, ctypes.c_int]
        self.dll.GPUMgr_ReleaseDisplayFrame.restype = None

        self.dll.GPUMgr_GetDisplayDevice.argtypes = [h, ctypes.c_int]
        self.dll.GPUMgr_GetDisplayDevice.restype = h

        # 资源池快捷访问
        self.dll.GPUMgr_GetResourceTexture.argtypes = [h, ctypes.c_uint64]
        self.dll.GPUMgr_GetResourceTexture.restype = h

        self.dll.GPUMgr_GetResourceSRV.argtypes = [h, ctypes.c_uint64]
        self.dll.GPUMgr_GetResourceSRV.restype = h

        self.dll.GPUMgr_GetResourceRTV.argtypes = [h, ctypes.c_uint64]
        self.dll.GPUMgr_GetResourceRTV.restype = h

        self.dll.GPUMgr_GetResourceUAV.argtypes = [h, ctypes.c_uint64]
        self.dll.GPUMgr_GetResourceUAV.restype = h

        # ========== D3D11/OpenGL 互操作 ==========
        self.dll.GPUMgr_InitializeGLInterop.argtypes = [h]
        self.dll.GPUMgr_InitializeGLInterop.restype = ctypes.c_int

        self.dll.GPUMgr_IsGLInteropSupported.argtypes = [h]
        self.dll.GPUMgr_IsGLInteropSupported.restype = ctypes.c_int

        self.dll.GPUMgr_ShutdownGLInterop.argtypes = [h]
        self.dll.GPUMgr_ShutdownGLInterop.restype = None

        self.dll.GPUMgr_CreateGLTextureFromD3D.argtypes = [h, ctypes.c_uint64]
        self.dll.GPUMgr_CreateGLTextureFromD3D.restype = h

        self.dll.GPUMgr_LockGLTexture.argtypes = [h, h]
        self.dll.GPUMgr_LockGLTexture.restype = ctypes.c_int

        self.dll.GPUMgr_UnlockGLTexture.argtypes = [h, h]
        self.dll.GPUMgr_UnlockGLTexture.restype = ctypes.c_int

        self.dll.GPUMgr_ReleaseGLTexture.argtypes = [h, h]
        self.dll.GPUMgr_ReleaseGLTexture.restype = ctypes.c_int

        self.dll.GPUMgr_GetGLTextureID.argtypes = [h, h]
        self.dll.GPUMgr_GetGLTextureID.restype = ctypes.c_uint

        # ========== DXGI SwapChain Presenter ==========
        self.dll.GPUMgr_CreatePresenter.argtypes = [h, h, ctypes.c_int, ctypes.c_int, ctypes.c_int]
        self.dll.GPUMgr_CreatePresenter.restype = ctypes.c_uint64

        self.dll.GPUMgr_DestroyPresenter.argtypes = [h, ctypes.c_uint64]
        self.dll.GPUMgr_DestroyPresenter.restype = None
